<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SettingsDialog</class>
 <widget class="QDialog" name="SettingsDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>424</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Settings</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QTabWidget" name="tabWidget">
     <property name="currentIndex">
      <number>1</number>
     </property>
     <widget class="QWidget" name="tab_ssh">
      <attribute name="title">
       <string>SSH</string>
      </attribute>
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0" colspan="2">
        <widget class="QCheckBox" name="checkBox_use_separete_known_hosts">
         <property name="text">
          <string>Set separate &amp;known hosts</string>
         </property>
        </widget>
       </item>
       <item row="1" column="0" colspan="3">
        <widget class="QTextEdit" name="textEdit_known_hosts"/>
       </item>
       <item row="2" column="0" colspan="2">
        <widget class="QCheckBox" name="checkBox_use_internal_ssh_library">
         <property name="text">
          <string>Use &amp;internal OpenSSH library</string>
         </property>
        </widget>
       </item>
       <item row="3" column="0">
        <widget class="QLabel" name="label_ssh_program">
         <property name="text">
          <string>SSH program path</string>
         </property>
        </widget>
       </item>
       <item row="3" column="1">
        <widget class="QLineEdit" name="lineEdit_ssh_program"/>
       </item>
       <item row="3" column="2">
        <widget class="QToolButton" name="browse_ssh_program_button">
         <property name="text">
          <string>...</string>
         </property>
        </widget>
       </item>
       <item row="4" column="0">
        <widget class="QLabel" name="label_ssh_args">
         <property name="text">
          <string>Addional options for SSH</string>
         </property>
        </widget>
       </item>
       <item row="4" column="1" colspan="2">
        <widget class="QLineEdit" name="lineEdit_ssh_args"/>
       </item>
       <item row="5" column="0">
        <widget class="QLabel" name="label_environment">
         <property name="text">
          <string>Addional Environment:</string>
         </property>
        </widget>
       </item>
       <item row="6" column="0" colspan="3">
        <layout class="QHBoxLayout" name="horizontalLayout_5">
         <item>
          <widget class="QTreeWidget" name="environment_list">
           <property name="editTriggers">
            <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
           </property>
           <column>
            <property name="text">
             <string>Name</string>
            </property>
           </column>
           <column>
            <property name="text">
             <string>Value</string>
            </property>
           </column>
          </widget>
         </item>
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
            <widget class="QPushButton" name="button_add_env_item">
             <property name="maximumSize">
              <size>
               <width>32</width>
               <height>32</height>
              </size>
             </property>
             <property name="text">
              <string>+</string>
             </property>
            </widget>
           </item>
           <item>
            <spacer name="verticalSpacer_2">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
             </property>
             <property name="sizeHint" stdset="0">
              <size>
               <width>20</width>
               <height>40</height>
              </size>
             </property>
            </spacer>
           </item>
           <item>
            <widget class="QPushButton" name="button_remove_env_item">
             <property name="maximumSize">
              <size>
               <width>32</width>
               <height>32</height>
              </size>
             </property>
             <property name="text">
              <string>-</string>
             </property>
            </widget>
           </item>
          </layout>
         </item>
        </layout>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tab_interface">
      <attribute name="title">
       <string>Interface</string>
      </attribute>
      <layout class="QGridLayout" name="gridLayout_3">
       <item row="1" column="0">
        <widget class="QLabel" name="label_style">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="text">
          <string>Style</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1" colspan="2">
        <widget class="QComboBox" name="combo_box_style"/>
       </item>
       <item row="2" column="0" colspan="2">
        <widget class="QCheckBox" name="checkBox_show_tray_icon">
         <property name="text">
          <string>Show &amp;Tray Icon</string>
         </property>
        </widget>
       </item>
       <item row="3" column="0" colspan="3">
        <widget class="QGroupBox" name="groupBox_notification">
         <property name="title">
          <string>Notification</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
           <widget class="QCheckBox" name="checkBox_window_alert_notification">
            <property name="text">
             <string>&amp;Window Alert</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="checkBox_tray_popup">
            <property name="text">
             <string>Tray &amp;Popup</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="checkBox_sound_notification">
            <property name="text">
             <string>Play &amp;Sound</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       <item row="4" column="0" colspan="3">
        <widget class="QGroupBox" name="groupBox_text">
         <property name="title">
          <string>Text</string>
         </property>
         <layout class="QFormLayout" name="formLayout">
          <item row="0" column="0">
           <widget class="QLabel" name="label_font">
            <property name="text">
             <string>Default font family</string>
            </property>
           </widget>
          </item>
          <item row="0" column="1">
           <widget class="QFontComboBox" name="fontComboBox"/>
          </item>
          <item row="1" column="0">
           <widget class="QLabel" name="label">
            <property name="text">
             <string>Default font size</string>
            </property>
           </widget>
          </item>
          <item row="1" column="1">
           <widget class="QSpinBox" name="spinBox_font_size">
            <property name="minimum">
             <number>1</number>
            </property>
            <property name="maximum">
             <number>256</number>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       <item row="2" column="2">
        <widget class="QCheckBox" name="checkBox_minimize_to_tray">
         <property name="text">
          <string>&amp;Hide to Tray when Minimized</string>
         </property>
        </widget>
       </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label_language">
         <property name="text">
          <string>Language</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1" colspan="2">
        <widget class="QComboBox" name="combo_box_language"/>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tab_image">
      <attribute name="title">
       <string>Image</string>
      </attribute>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="1" column="0" colspan="2">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
           <height>40</height>
          </size>
         </property>
        </spacer>
       </item>
       <item row="0" column="0">
        <widget class="QCheckBox" name="checkBox_use_custom_jpeg_quality">
         <property name="text">
          <string>Override default JPEG quality</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="QSpinBox" name="spinBox_jpeg_quality">
         <property name="value">
          <number>90</number>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>SettingsDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>SettingsDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>checkBox_use_separete_known_hosts</sender>
   <signal>toggled(bool)</signal>
   <receiver>textEdit_known_hosts</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>199</x>
     <y>54</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>103</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>checkBox_use_internal_ssh_library</sender>
   <signal>toggled(bool)</signal>
   <receiver>SettingsDialog</receiver>
   <slot>use_internal_ssh_library_checked(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>199</x>
     <y>152</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>190</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>button_add_env_item</sender>
   <signal>clicked()</signal>
   <receiver>SettingsDialog</receiver>
   <slot>add_environment_variable()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>361</x>
     <y>273</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>190</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>button_remove_env_item</sender>
   <signal>clicked()</signal>
   <receiver>SettingsDialog</receiver>
   <slot>remove_environment_variable()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>361</x>
     <y>309</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>190</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>browse_ssh_program_button</sender>
   <signal>clicked()</signal>
   <receiver>SettingsDialog</receiver>
   <slot>browse_ssh_program()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>367</x>
     <y>187</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>190</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>SettingsDialog</sender>
   <signal>accepted()</signal>
   <receiver>SettingsDialog</receiver>
   <slot>save_settings()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>199</x>
     <y>190</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>190</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>checkBox_show_tray_icon</sender>
   <signal>clicked(bool)</signal>
   <receiver>checkBox_tray_popup</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>199</x>
     <y>94</y>
    </hint>
    <hint type="destinationlabel">
     <x>203</x>
     <y>289</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>checkBox_use_custom_jpeg_quality</sender>
   <signal>clicked(bool)</signal>
   <receiver>spinBox_jpeg_quality</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>150</x>
     <y>60</y>
    </hint>
    <hint type="destinationlabel">
     <x>333</x>
     <y>61</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>use_internal_ssh_library_checked(bool)</slot>
  <slot>add_environment_variable()</slot>
  <slot>remove_environment_variable()</slot>
  <slot>browse_ssh_program()</slot>
  <slot>save_settings()</slot>
 </slots>
</ui>
